비회원 게시판 읽기 및 회원가입 UI 수정

--- a/src/app/boards/[id]/NoneUserBoardReadForm.module.css
+++ b/src/app/boards/[id]/NoneUserBoardReadForm.module.css
@@ -1,14 +1,23 @@
 #background{
     background-color: powderblue;
 }
+.none {
+    display: none;
+}
+.block {
+    display: block;
+}
 #top {
     width: 90%;
     display: flex;
     justify-content: space-around;
+    background: lavender;
+    margin-bottom: 20px;
+    height: 40px;
+    align-items: center;
+    font-size: 25px;
 }
-#top2 {
 
-}
 #author {
     font-size: 0.4cm;
     float:right;
@@ -27,72 +36,183 @@
     display: flex;
     justify-content: space-around;
     width: 90%;
+    border: 1px solid black;
 }
 #up {
     display: flex;
     justify-content: space-around;
     width: 30%;
+    cursor: pointer;
+}
+#feedbackCenter {
+    border: 1px solid black;
 }
 #down {
     display: flex;
     justify-content: space-around;
     width: 30%;
+    cursor: pointer;
 }
 #manage {
     width: 10%;
     display: inline-flex;
     justify-content: space-around;
+    border: 1px solid black;
+    border-left: 0px;
+    
 }
 #delete {
     background-color: pink;
+    cursor: pointer;
 }
 #edit {
     background-color: pink;
+    cursor: pointer;
 }
+
 #comment {
-    background-color: #139ff7;
+    background-color: powderblue;
     height: 1cm;
     align-items: center;
     display: flex;
     justify-content: space-around;
+    margin-top: 20px;
+    border: 1px solid black;
+    border-bottom: 0px;
+    width: 80vw;
+    margin-left: 50%;
+    transform: translatex(-50%);
+    border-bottom: 3px solid black;
+    
+}
+#commentGroup {
+    width: 80vw;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    border: 1px solid black;
+
 }
 
-#commentWriteNameArea1 {
-    width: 45%;
-    display: flex;
-    justify-content: space-around;
-    /* border-left: 1px solid black; */
-    background: powderblue;
-}
-#commentWriteNameArea2 {
-    width: 90%;
-    display: flex;
-    justify-content: space-around;
-    /* border-left: 1px solid black; */
-    background: powderblue;
+.parentCommentDiv0 {
+    margin-bottom: 70px;
 }
 
-#commentWritePasswordArea {
-    width: 45%;
+.parentCommentDiv1 {
+    width: 100%;
+    border-top: 1px solid black;
+    padding-top: 20px;
+    border-bottom: 1px solid black;
+    padding-bottom: 20px;
+    
 }
-#commentWritePassword1 {
+#parentComment0 {
+    padding-top: 30px;
+}
+#otherCommentWriteAreaParent {
+    width: 99%;
+    margin-left: 1%
+}
+.childCommentDiv {
     width: 100%;
 }
-#white {
-    width: calc(100% - 2px);
-    min-height: 300px;
+
+#childCommentSelector {
+    margin-left: 10%;
 }
+#otherCommentWriteAreaParent2 {
+    width: 80vw;
+    margin-left: 50%;
+    transform: translateX(-50%);
+}
+#parentCommentGuide {
+    text-align: center;
+    border: 1px solid black;
+    
+    cursor: pointer;
+    background-color: lavender;
+}
+#otherChildCommentData {
+    width: 100%;
+
+}
+.childCommentGuide {
+    text-align: center;
+    border: 1px solid black;
+    cursor: pointer;
+    background: lavender;
+}
+.childParentL {
+    display: flex;
+}
+#otherCommentWriteNameArea1 {
+    flex:1;
+    display: flex;
+    justify-content: space-around;
+    /* border-left: 1px solid black; */
+    background: powderblue;
+}
+#otherCommentWriteNameArea2 {
+    
+    display: flex;
+    justify-content: space-around;
+    /* border-left: 1px solid black; */
+    background: powderblue;
+}
+
+#otherCommentWritePasswordArea {
+    display: flex;
+    flex:1;
+}
+.otherCommentWritePassword1 {
+    width: 100%;
+}
+
 .parentComment {
     min-height: 3cm;
     background-color: pink;
 }
+
+
+#otherCommentContentArea {
+    display: flex;
+}
+.parentReadCommentName {
+    width: 90%;
+    background-color: powderblue;
+    border: 1px solid black;
+    border-left: 0px;
+
+}
 .parentWriteComment {
-    width: 90.15%;
+    width: 90%;
     resize: none;
     /*height: 335px;*/
     min-height: 1cm;
     background-color: pink;
     display: block;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
+}
+.childCommnetReadArea {
+    display: flex;
+    
+}
+#childCommentReadHidden {
+    color:white;
+}
+#childCommentReadContent {
+    background: pink;
+    height: 50px;
+    width: 90%;
+    margin-left: 10%;
+    text-align: center
+}
+.parentWriteComment1 {
+    resize: none;
+    min-height: 1cm;
+    background-color: pink;
+    display: block;
+    flex:1;
 }
 .CommentWrtieCustomTool {
     display: inline-flex;
@@ -101,10 +221,9 @@
     justify-content: flex-end;
 }
 
-element.style {
-}
+
 .parentCommentSubmitArea {
-    width: 90.4%;
+    flex:1;
     height: 1cm;
     background: powderblue;
     /* position: relative; */
@@ -114,19 +233,11 @@ element.style {
     justify-content: space-around;
     align-items: center;
     border: 1px solid black;
+    margin-bottom: 40px;   
     /* margin: 0; */
     /* margin-top: -1.07cm; */
 }
 
-.x {
-    height: 2px;
-    color: black;
-    margin: 0;
-    background: black;
-    /* bottom: 10cm; */
-}
-.x3 {
-}
 #flex {
     display: flex;
 }
