--- a/src/app/join/Join.module.css
+++ b/src/app/join/Join.module.css
@@ -66,7 +66,8 @@
 
 #section {
     width: 100%;
-
+    background: gray;
+    padding-bottom: 40px
 }
 #background{
     background-color: gray;
@@ -82,9 +83,13 @@
 }
 #article {
     margin-top:1cm;
-
     display: flex;
     flex-direction: column;
+    background: white;
+    width: 60%;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    max-width: 600px;
 }
 #login {
     width: 5cm;
@@ -94,6 +99,8 @@
 }
 #loginHeader {
     height: 1.5cm;
+    border-bottom: 3px solid black;
+    margin-top: 10px;
 }
 #as {
 
@@ -103,18 +110,22 @@
     height: 3cm;
     display: flex;
     justify-content: space-evenly;
+    border-bottom: 1px solid black;
+    margin-top: 10px;
     /*margin-left:50%;*/
 }
 .con2 {
     height: 2cm;
     display: flex;
     justify-content: space-evenly;
+    border-bottom: 1px solid black;
     /*margin-left:50%;*/
 }
 .con4 {
     height: 2.5cm;
     display: flex;
     justify-content: space-evenly;
+    border-bottom: 1px solid black;
     
     
 }
@@ -123,28 +134,32 @@
     display: flex;
     justify-content: space-evenly;
     margin-left: -3px;
+    border-bottom: 1px solid black;
 }
 
 .flexBox {
     height:1cm;
     width:5cm;
+    background: powderblue;
 }
 #checkUserEmailButton {
-    height: 1cm;
+    height: 1.1cm;
     width:2cm;
     background-color: powderblue;
-    border: 0;
+    border: 1px solid black;
+
 }
 .x {
     line-height: 0;
     font-weight: bold;
+    text-align: center;
 }
 
 #timer {
     line-height: 0;
 }
 .as2 {
-    margin-left: 79px;
+    flex: 1;
 }
 .as3 {
     margin-left: -3px;
@@ -153,9 +168,14 @@
 #trans {
     width: 200px;
     height: 1cm;
+    background: powderblue;
 }
 
-
+#emailDiv {
+    display: flex;
+    justify-content: center;
+    gap:10px;
+}
 #joinButton {
     width:3cm;
     height:1cm;
@@ -211,3 +231,34 @@
 
 }
 
+@media (max-width: 480px) {
+    
+    .con3 {
+        height: 4cm;
+        display: flex;
+        justify-content: space-evenly;
+        margin-left: -3px;
+        border-bottom: 1px solid black;
+    }
+    #emailDiv {
+        display: block;
+        
+    }
+
+    .flexBox {
+        height:1cm;
+        width:5cm;
+        background: powderblue;
+        margin-left: 50%;
+        transform: translateX(-50%);
+    }
+    #checkUserEmailButton {
+        height: 1.1cm;
+        width:2cm;
+        background-color: powderblue;
+        border: 1px solid black;
+        margin-left: 50%;
+        transform: translateX(-50%);
+        margin-top: 10px;
+    }
+}
