프로젝트 관련 UI 전체 개선 중(2)

--- a/src/app/advertise.module.css
+++ b/src/app/advertise.module.css
@@ -194,7 +194,7 @@
     /*background-color: pink;*/
 }
 #thead {
-    background-color: whitesmoke;
+    background-color: lavender;
 }
 .thTitle {
     width: 30%;
