--- a/src/app/board/search/advertise.module.css
+++ b/src/app/board/search/advertise.module.css
@@ -189,7 +189,7 @@
     cursor: pointer;
 }
 #thead {
-    background-color: whitesmoke;
+    background-color: lavender;
 }
 .thId {
     width: 15%;
