커서 추가 후 어드민 컴포넌트 실행 시 리액트 삭제 로직 수정

--- a/src/app/boards/[id]/UserBoardReadForm.module.css
+++ b/src/app/boards/[id]/UserBoardReadForm.module.css
@@ -63,9 +63,11 @@
 }
 #delete {
     background-color: pink;
+    cursor: pointer;
 }
 #edit {
     background-color: pink;
+    cursor: pointer;
 }
 #comment {
     background-color: powderblue;
@@ -223,6 +225,7 @@
     justify-content: space-around;
     align-items: center;
     border: 1px solid black;
+    cursor: pointer;
         /* position: relative; */
     /* margin-top: -1cm; */
     /* margin-left: 79.8%; */
