--- a/src/app/boards/[id]/NoneUserBoardReadForm.module.css
+++ b/src/app/boards/[id]/NoneUserBoardReadForm.module.css
@@ -234,6 +234,7 @@
     align-items: center;
     border: 1px solid black;
     margin-bottom: 40px;   
+    cursor: pointer;
     /* margin: 0; */
     /* margin-top: -1.07cm; */
 }
