--- a/src/app/board/search/advertise.module.css
+++ b/src/app/board/search/advertise.module.css
@@ -22,7 +22,7 @@
     width: 14.5%;
     height: 40px;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-
+    font-weight: 900;
 }
 
 #loginBox {
@@ -132,6 +132,7 @@
     background-color: powderblue;
     color: white;
     text-shadow: -1px 0 gray, 0 1px gray, 1px 0 gray, 0 -1px gray;
+    font-weight: 490;
 
 
 
@@ -150,6 +151,7 @@
 
     color: white;
     text-shadow: -1px 0 gray, 0 1px gray, 1px 0 gray, 0 -1px gray;
+    font-weight: 490;
 }
 
 #inline {
