--- a/src/app/boards/edit/[id]/UserBoardEditForm.module.css
+++ b/src/app/boards/edit/[id]/UserBoardEditForm.module.css
@@ -11,7 +11,7 @@ Header {
     width: 16%;
     height: 40px;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-
+    font-weight: 900;
 
 }
 .left{
