--- a/src/app/join/Join.module.css
+++ b/src/app/join/Join.module.css
@@ -11,7 +11,7 @@
     width: 14.5%;
     height: 40px;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-
+    font-weight: 900;
 }
 
 
