--- a/src/app/write/UserBoardWriteForm.module.css
+++ b/src/app/write/UserBoardWriteForm.module.css
@@ -28,7 +28,7 @@
     width: 16%;
     height: 40px;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-
+    font-weight: 900;
 
 }
 .left{
