게시판 수정, 쓰기 관련 UI는 노트북에서 1200px 이상은 가로가 너무커서 수정 로그인에서 메인페이지로 이동할 때 이전버튼 눌러야 되는거 불편해 보이니 관련 기능 및 로직 추가

--- a/src/app/boards/[id]/UserBoardReadForm.module.css
+++ b/src/app/boards/[id]/UserBoardReadForm.module.css
@@ -60,6 +60,8 @@
     justify-content: space-around;
     border: 1px solid black;
     border-left: 0px;
+    align-items: center;
+    font-size: 20px;
 }
 #delete {
     background-color: pink;
