--- a/src/app/write/NoneUserBoardWriteForm.module.css
+++ b/src/app/write/NoneUserBoardWriteForm.module.css
@@ -191,7 +191,7 @@
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
-
+    cursor: pointer;
 /* 텍스트 space-evently 로 가운데 정렬 해보기 */
 }
 
@@ -412,16 +412,17 @@
     /*background-color: pink;*/
 
 }
-@media (min-width: 1553px) {
+@media (min-width: 1253px) {
     #header {
         width: 100%;
     }
     .left {
-        max-width: 1500px
+        max-width: 1200px;
     }
     .item2 {
-        max-width: 1500px;
-
+        max-width: 1206px;
+        margin-left: 0.8%;
+        width: 80.1%;
     }
     #divCenter {
         text-align: center;
