--- a/src/app/boards/[id]/NoneUserBoardReadForm.module.css
+++ b/src/app/boards/[id]/NoneUserBoardReadForm.module.css
@@ -59,6 +59,8 @@
     justify-content: space-around;
     border: 1px solid black;
     border-left: 0px;
+    align-items: center;
+    font-size: 20px;
     
 }
 #delete {
