--- a/src/app/boards/edit/[id]/UserBoardEditForm.module.css
+++ b/src/app/boards/edit/[id]/UserBoardEditForm.module.css
@@ -443,6 +443,26 @@ aside {
     /*background-color: pink;*/
 
 }
+
+@media (min-width: 1253px) {
+    #header {
+        width: 100%;
+    }
+    .left {
+        max-width: 1200px;
+    }
+    .item2 {
+        max-width: 1206px;
+        margin-left: 0.8%;
+        width: 80.1%;
+        
+    }
+    #divCenter {
+        text-align: center;
+    }
+
+}
+
 @media (max-width: 1400px) {
     #title{
         /*position:relative;*/
@@ -463,6 +483,7 @@ aside {
 
 
 }
+
 @media (max-width: 1323px) {
     #writeButton{
         /*position: absolute;
