--- a/src/app/boards/[id]/UserBoardReadForm.module.css
+++ b/src/app/boards/[id]/UserBoardReadForm.module.css
@@ -44,6 +44,8 @@
     justify-content: space-around;
     width: 30%;
     cursor: pointer;
+    align-items: center;
+    font-size: 20px;
 }
 #feedbackCenter {
     border: 1px solid black;
@@ -53,6 +55,8 @@
     justify-content: space-around;
     width: 30%;
     cursor: pointer;
+    align-items: center;
+    font-size: 20px;
 }
 #manage {
     width: 10%;
