--- a/src/app/boards/[id]/NoneUserBoardReadForm.module.css
+++ b/src/app/boards/[id]/NoneUserBoardReadForm.module.css
@@ -37,6 +37,7 @@
     justify-content: space-around;
     width: 90%;
     border: 1px solid black;
+    background-color: white;
 }
 #up {
     display: flex;
@@ -63,7 +64,7 @@
     border-left: 0px;
     align-items: center;
     font-size: 20px;
-    
+    background-color: white;
 }
 #delete {
     background-color: pink;
@@ -87,6 +88,8 @@
     margin-left: 50%;
     transform: translatex(-50%);
     border-bottom: 3px solid black;
+    font-size: 20px;
+    padding: 10px 0px;
     
 }
 #commentGroup {
@@ -144,16 +147,25 @@
     border: 1px solid black;
     cursor: pointer;
     background: lavender;
+    cursor: pointer;
 }
 .childParentL {
+    display: block;
+}
+.childParentLDiv {
     display: flex;
+}
+.childParentLDivChildDiv {
+    display: flex;
+    flex:1;
 }
 #otherCommentWriteNameArea1 {
     flex:1;
     display: flex;
     justify-content: space-around;
+    background-color: #ffbebe;
     /* border-left: 1px solid black; */
-    background: powderblue;
+    border: 1px solid black;
 }
 #otherCommentWriteNameArea2 {
     
@@ -173,7 +185,7 @@
 
 .parentComment {
     min-height: 3cm;
-    background-color: pink;
+    background-color: #ffc0cbb0;
 }
 
 
@@ -182,7 +194,7 @@
 }
 .parentReadCommentName {
     width: 90%;
-    background-color: powderblue;
+    background-color: #ffc0cbb0;
     border: 1px solid black;
     border-left: 0px;
 
@@ -192,7 +204,7 @@
     resize: none;
     /*height: 335px;*/
     min-height: 1cm;
-    background-color: pink;
+    background-color: powderblue;
     display: block;
     border-right: 1px solid black;
     border-bottom: 1px solid black;
@@ -205,16 +217,17 @@
     color:white;
 }
 #childCommentReadContent {
-    background: pink;
+    background: #ffc0cbb0;
     height: 50px;
     width: 90%;
     margin-left: 10%;
-    text-align: center
+    text-align: center;
+    font-size: 14px;
 }
 .parentWriteComment1 {
     resize: none;
     min-height: 1cm;
-    background-color: pink;
+    background-color: #ffc0cbb0;
     display: block;
     flex:1;
 }
@@ -229,7 +242,7 @@
 .parentCommentSubmitArea {
     flex:1;
     height: 1cm;
-    background: powderblue;
+    background: lightgray;
     /* position: relative; */
     /* margin-top: -1cm; */
     /* margin-left: 79.8%; */
