--- a/src/app/boards/[id]/UserBoardReadForm.module.css
+++ b/src/app/boards/[id]/UserBoardReadForm.module.css
@@ -38,6 +38,7 @@
     justify-content: space-around;
     width: 90%;
     border: 1px solid black;
+    background-color: white;
 }
 #up {
     display: flex;
@@ -66,6 +67,7 @@
     border-left: 0px;
     align-items: center;
     font-size: 20px;
+    background-color: white;
 }
 #delete {
     background-color: pink;
@@ -145,6 +147,7 @@
     border: 1px solid black;
     cursor: pointer;
     background: lavender;
+    cursor: pointer;
 }
 .childParentL {
     display: flex;
@@ -157,7 +160,8 @@
     flex: 1;
     display: flex;
     justify-content: space-around;
-    background: powderblue;
+    background: #ffbebe;
+    border: 1px solid black;
 }
 #otherCommentContentArea {
     display: flex;
@@ -165,18 +169,19 @@
 .parentWriteComment1 {
     resize: none;
     min-height: 1cm;
-    background-color: pink;
+    background-color: #ffc0cbb0;
     display: block;
     flex: 1;
 }
 
 
 #childCommentReadContent {
-    background: pink;
+    background: #ffc0cbb0;
     height: 50px;
     width: 90%;
     margin-left: 10%;
     text-align: center;
+    font-size: 15px;
 }
 
 
@@ -198,20 +203,20 @@
 
 .parentComment {
     min-height: 3cm;
-    background-color: pink;
+    background-color: #ffc0cbb0;
 }
 .parentWriteComment {
     width: 90%;
     resize: none;
     /*height: 335px;*/
     min-height: 1cm;
-    background-color: pink;
+    background-color: #ffc0cbb0;
     display: block;
 }
 #parentWriteComment1 {
     resize: none;
     min-height: 1cm;
-    background-color: pink;
+    background-color: #ffc0cbb0;
     display: block;
     flex: 1;
 }
@@ -225,7 +230,7 @@
 .parentCommentSubmitArea {
 
     height: 1cm;
-    background: powderblue;
+    background: lightgray;
 
     display: flex;
     justify-content: space-around;
