게시글 읽기에서 대댓글이 너무 많은 경우 ui가 보기 싫어서 수정(2)

--- a/src/app/boards/[id]/NoneUserBoardReadForm.module.css
+++ b/src/app/boards/[id]/NoneUserBoardReadForm.module.css
@@ -76,7 +76,7 @@
 }
 
 #comment {
-    background-color: powderblue;
+    background-color: white;
     height: 1cm;
     align-items: center;
     display: flex;
