--- a/src/app/boards/[id]/UserBoardReadForm.module.css
+++ b/src/app/boards/[id]/UserBoardReadForm.module.css
@@ -78,7 +78,7 @@
     cursor: pointer;
 }
 #comment {
-    background-color: powderblue;
+    background-color: white;
     height: 1cm;
     align-items: center;
     display: flex;
