게시글 읽기에서 대댓글이 너무 많은 경우 ui가 보기 싫어서 수정(3)

--- a/src/app/boards/[id]/NoneUserBoardReadForm.module.css
+++ b/src/app/boards/[id]/NoneUserBoardReadForm.module.css
@@ -163,7 +163,7 @@
     flex:1;
     display: flex;
     justify-content: space-around;
-    background-color: #ffbebe;
+    background-color: aliceblue;
     /* border-left: 1px solid black; */
     border: 1px solid black;
 }
@@ -173,6 +173,7 @@
     justify-content: space-around;
     /* border-left: 1px solid black; */
     background: powderblue;
+    flex: 1;
 }
 
 #otherCommentWritePasswordArea {
