글 조회의 게시판 배경색 변경으로 ckeditor 색 변경

--- a/public/ckeditor/contents.css
+++ b/public/ckeditor/contents.css
@@ -15,7 +15,7 @@ body
 
 	/* Remove the background color to make it transparent.
 	background-color: #fff; */
-	background-color: powderblue;
+	background-color: white;
 
 
 	margin: 20px;
