--- a/src/app/boards/edit/[id]/ckeditor-board-edit.css
+++ b/src/app/boards/edit/[id]/ckeditor-board-edit.css
@@ -21,10 +21,10 @@
     /*88%에서 100%로 바꿈 */
 }
 #cke_1_bottom{
-    background-color: powderblue;
+    background-color: white;
 }
 #cke_elementspath_11_0,#cke_elementspath_11_1 {
-    color: powderblue;
+    color: white;
 }
 
 
