--- a/src/app/write/ckeditor-board-write.css
+++ b/src/app/write/ckeditor-board-write.css
@@ -38,9 +38,9 @@
 
 
 #cke_1_bottom{
-    background-color: powderblue;
+    background-color: white;
 }
 #cke_elementspath_11_0,#cke_elementspath_11_1 {
-    color: powderblue;
+    color: white;
 }
 
