--- a/src/app/boards/[id]/NoneUserBoardReadForm.module.css
+++ b/src/app/boards/[id]/NoneUserBoardReadForm.module.css
@@ -33,12 +33,14 @@
 }
 #boardTool {
     display: flex;
-    width: 100%;
+    width: 90%;
+    transform: translateX(-50%);
+    margin-left: 50%;
 }
 #feedback {
     display: flex;
     justify-content: space-around;
-    width: 90%;
+    width: 100%;
     border: 1px solid black;
     background-color: white;
 }
@@ -57,26 +59,31 @@
     justify-content: space-around;
     width: 30%;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 20px;   
 }
 #manage {
-    width: 10%;
+    width: 100%;
     display: inline-flex;
-    justify-content: space-around;
-    border: 1px solid black;
+    justify-content: end;
     border-left: 0px;
     align-items: center;
     font-size: 20px;
     background-color: white;
-}
-#delete {
-    background-color: lavender;
-    cursor: pointer;
+    margin-top: 10px;
 }
 #edit {
     background-color: lavender;
     cursor: pointer;
+    padding:10px;
 }
+#delete {
+    background-color: lavender;
+    cursor: pointer;
+    padding:10px;
+    margin-left:20px;
+    margin-right: 10px;
+}
+
 
 #comment {
     background-color: white;
@@ -151,6 +158,7 @@
     cursor: pointer;
     background: lavender;
     cursor: pointer;
+    padding: 10px 0px;
 }
 .childParentL {
     display: block;
@@ -272,13 +280,3 @@
     color: blue;
 }
 
-@media (max-width: 769px) {
-    #manage{
-        width: 20%;
-    }
-}
-@media (max-width: 471px) {
-    #manage{
-        width: 30%;
-    }
-}
