--- a/src/app/boards/[id]/UserBoardReadForm.module.css
+++ b/src/app/boards/[id]/UserBoardReadForm.module.css
@@ -33,12 +33,14 @@
 }
 #boardTool {
     display: flex;
-    width: 100%;
+    width: 90%;
+    transform: translateX(-50%);
+    margin-left: 50%;
 }
 #feedback {
     display: flex;
     justify-content: space-around;
-    width: 90%;
+    width: 100%;
     border: 1px solid black;
     background-color: white;
 }
@@ -62,23 +64,28 @@
     font-size: 20px;
 }
 #manage {
-    width: 10%;
+    width: 100%;
     display: inline-flex;
-    justify-content: space-around;
-    border: 1px solid black;
+    justify-content: end;
     border-left: 0px;
     align-items: center;
     font-size: 20px;
+    margin-top:10px;
     background-color: white;
-}
-#delete {
-    background-color: lavender;
-    cursor: pointer;
 }
 #edit {
     background-color: lavender;
     cursor: pointer;
+    padding: 10px;
 }
+#delete {
+    background-color: lavender;
+    cursor: pointer;
+    padding: 10px;
+    margin-left: 20px;
+    margin-right: 10px;
+}
+
 #comment {
     background-color: white;
     height: 1cm;
@@ -150,6 +157,7 @@
     cursor: pointer;
     background: lavender;
     cursor: pointer;
+    padding: 10px 0px;
 }
 .childParentL {
     display: flex;
@@ -267,9 +275,7 @@
     }
 }
 @media (max-width: 769px) {
-    #manage{
-        width: 20%;
-    }
+ 
 }
 @media (max-width: 630px) {
     #commentWriteNameArea2 {
@@ -281,9 +287,7 @@
     }
 }
 @media (max-width: 471px) {
-    #manage{
-        width: 30%;
-    }
+  
 }
 @media (max-width: 440px) {
     #commentWriteNameArea2 {
