게시글 읽기에서 색깔이 너무 튀어서 색깔 관련 UI 지우고, 버튼이 있는 UI 색깔 통일(2)

--- a/src/app/boards/[id]/UserBoardReadForm.module.css
+++ b/src/app/boards/[id]/UserBoardReadForm.module.css
@@ -105,6 +105,7 @@
     margin-left: 50%;
     transform: translateX(-50%);
     border: 1px solid black;
+    
 }
 .parentCommentDiv0 {
     margin-bottom: 70px;
@@ -146,6 +147,7 @@
     margin-top: 20px;
     cursor: pointer;
     background-color: lavender;
+    padding: 10px;
 }
 #otherChildCommentData {
     width: 100%;
