--- a/src/app/boards/[id]/NoneUserBoardReadForm.module.css
+++ b/src/app/boards/[id]/NoneUserBoardReadForm.module.css
@@ -1,6 +1,5 @@
 #background{
-    background-color: white;
-    border: 1px solid black; 
+    background-color: white; 
 }
 .none {
     display: none;
@@ -61,10 +60,13 @@
     cursor: pointer;
     font-size: 20px;   
 }
+.thumbsStyle {
+    color: "#ff0000";
+}
 #manage {
-    width: 100%;
+    width: 98%;
     display: inline-flex;
-    justify-content: end;
+    justify-content: flex-end;
     border-left: 0px;
     align-items: center;
     font-size: 20px;
@@ -75,6 +77,7 @@
     background-color: lavender;
     cursor: pointer;
     padding:10px;
+    border: 3px solid black;
 }
 #delete {
     background-color: lavender;
@@ -82,6 +85,7 @@
     padding:10px;
     margin-left:20px;
     margin-right: 10px;
+    border: 3px solid black;
 }
 
 
@@ -131,6 +135,7 @@
 }
 .childCommentDiv {
     width: 100%;
+    margin-top: 10px;
 }
 
 #childCommentSelector {
@@ -148,6 +153,9 @@
     cursor: pointer;
     background-color: lavender;
     padding: 10px;
+    border: 2px solid black;
+    margin-bottom: 20px;
+    
 }
 #otherChildCommentData {
     width: 100%;
@@ -160,6 +168,8 @@
     background: lavender;
     cursor: pointer;
     padding: 10px 0px;
+    border: 2px solid black;
+    margin-top: 10px;
 }
 .childParentL {
     display: block;
@@ -172,9 +182,8 @@
     flex:1;
 }
 #otherCommentWriteNameArea1 {
-    flex:1;
-    display: flex;
-    justify-content: space-around;
+    width: 90%;
+    margin-left: 10%;
     background-color: #d3d3d375;
     /* border-left: 1px solid black; */
     border: 1px solid black;
@@ -235,7 +244,7 @@
     height: 50px;
     width: 90%;
     margin-left: 10%;
-    text-align: center;
+
     font-size: 14px;
 }
 .parentWriteComment1 {
@@ -266,6 +275,7 @@
     border: 1px solid black;
     margin-bottom: 40px;   
     cursor: pointer;
+    border: 2px solid black;
     /* margin: 0; */
     /* margin-top: -1.07cm; */
 }
