--- a/src/app/boards/[id]/UserBoardReadForm.module.css
+++ b/src/app/boards/[id]/UserBoardReadForm.module.css
@@ -1,6 +1,5 @@
 #background{
     background-color: white;
-    border: 1px solid black;
 }
 .none {
     display: none;
@@ -31,6 +30,7 @@
     overflow:scroll;
     border: 1px solid black;
 }
+
 #boardTool {
     display: flex;
     width: 90%;
@@ -64,9 +64,9 @@
     font-size: 20px;
 }
 #manage {
-    width: 100%;
+    width: 95%;
     display: inline-flex;
-    justify-content: end;
+    justify-content: flex-end;
     border-left: 0px;
     align-items: center;
     font-size: 20px;
@@ -87,7 +87,7 @@
 }
 
 #comment {
-    background-color: white;
+    background-color: #d3d3d375;
     height: 1cm;
     align-items: center;
     display: flex;
@@ -127,6 +127,7 @@
 }
 .childCommentDiv {
     width: 100%;
+    margin-top: 10px;
     
 }
 
@@ -148,6 +149,9 @@
     cursor: pointer;
     background-color: lavender;
     padding: 10px;
+    border: 2px solid black;
+    margin-bottom: 20px;
+    
 }
 #otherChildCommentData {
     width: 100%;
@@ -160,15 +164,21 @@
     background: lavender;
     cursor: pointer;
     padding: 10px 0px;
+    border: 2px solid black;
+    margin-top: 10px;
 }
 .childParentL {
     display: flex;
 }
 
 #otherCommentWriteNameArea1 {
-    flex: 1;
-    display: flex;
-    justify-content: space-around;
+    width: 90%;
+    margin-left: 10%;
+    background: #d3d3d375;
+    border: 1px solid black;
+}
+#otherCommentWriteNameArea2 {
+    width: 100%;
     background: #d3d3d375;
     border: 1px solid black;
 }
@@ -189,14 +199,15 @@
     background: white;
     height: 50px;
     width: 90%;
-    margin-left: 10%;
-    text-align: center;
+    margin-left: 10%;   
+    padding: 10px 0px;
     border: 1px solid black;
     font-size: 15px;
 }
 
 
 #commentWriteNameArea2 {
+    border-top: 1px solid black;
     flex:1;
     display: flex;
     justify-content: space-around;
@@ -249,6 +260,8 @@
     align-items: center;
     border: 1px solid black;
     cursor: pointer;
+    border: 2px solid black;
+    
         /* position: relative; */
     /* margin-top: -1cm; */
     /* margin-left: 79.8%; */
