게시판 댓글 일부 UI 깔끔하게 좀 더수정

--- a/src/app/boards/[id]/NoneUserBoardReadForm.module.css
+++ b/src/app/boards/[id]/NoneUserBoardReadForm.module.css
@@ -201,6 +201,12 @@
     display: flex;
     flex:1;
 }
+#commentWriteName1 {
+    border: 0px;
+    background: #d3d3d375;
+    width: 100%;
+    text-align: center;
+}
 .otherCommentWritePassword1 {
     width: 100%;
 }
