게시글 읽기에서 권한이 다른 일반회원은 좋아요,싫어요 관련 진한 바탕색이랑 좋아요 싫어요 창이 좁은 부분의 문제가 해결안되어 있어서 수정

--- a/src/app/boards/[id]/UserBoardReadForm.module.css
+++ b/src/app/boards/[id]/UserBoardReadForm.module.css
@@ -32,7 +32,7 @@
 }
 
 #boardTool {
-    display: flex;
+
     width: 90%;
     transform: translateX(-50%);
     margin-left: 50%;
@@ -76,12 +76,14 @@
 #edit {
     background-color: lavender;
     cursor: pointer;
-    padding: 10px;
+    padding:10px;
+    border: 3px solid black;
 }
 #delete {
     background-color: lavender;
     cursor: pointer;
-    padding: 10px;
+    padding:10px;
+    border: 3px solid black;
     margin-left: 20px;
     margin-right: 10px;
 }
