게시글을 수정할 때 글쓰기 버튼을 갖다대면 버튼 표시가 마우스 커서로 떠야 쉽게 알아볼 수 있는데 안 떠서 css 추가함

--- a/src/app/boards/edit/[id]/NoneUserBoardEditForm.module.css
+++ b/src/app/boards/edit/[id]/NoneUserBoardEditForm.module.css
@@ -182,6 +182,7 @@
     border-left: 2px solid black;
     width:2cm;
     display: flex;
+    cursor: pointer;
     justify-content: space-evenly;
     flex-direction: row;
     align-items: center;
