기본 게시글처럼 알람 thead 라벤더 색으로 변경(지난번에는 깃허브,티스토리,쪽지 박스 칸을 변경을 안해줬던 부분 수정했음) 게시판 Id 창 width 10%로 줄여서 id가 너무 길어서 너비가 넘쳐버려  세로로 칸 높이가 커지는 부분을 옆에 있는 게시판 id를 줄이는 방식으로  id와 관련된 테이블 칸 크기의 너비를 키움

--- a/src/app/alarm/Alarm.module.css
+++ b/src/app/alarm/Alarm.module.css
@@ -133,6 +133,9 @@
 
 
 }
+#thead {
+    background-color: lavender;
+}
 .tr {
     cursor: pointer;
 }
@@ -141,7 +144,7 @@
 }
 
 .thId {
-    width: 20%;
+    width: 10%;
     text-overflow: ellipsis;
     overflow: hidden;
 
