윈도우 컴퓨터같이 가로 해상도가 큰 경우 테이블이 너무 길면 보기 싫기 때문에 최대 너비 정하고, 비율도 100%에서 90%랑 가운데 정렬로 줄이고, footer도 텍스트가 가운데 정렬안되는 에러 해결

--- a/src/app/alarm/Alarm.module.css
+++ b/src/app/alarm/Alarm.module.css
@@ -1,3 +1,9 @@
+#body {
+    width: 90%;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    max-width: 1200px;
+}
 #Header {
     /*background-color: pink;*/
     width: 100%;
@@ -198,12 +204,9 @@
 }
 
 #footerText {
-    display: flex;
-    position: relative;
-    align-content: flex-end;
-    justify-content: space-around;
-    padding-left: calc((100vw - 100%) / 2); /* 브라우저의 스크롤바 너비를 계산하여 왼쪽 패딩 값을 조정합니다 */
-
+    margin-left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
 }
 
 .container2 {
