알람 페이지의 테이블 헤더 크기 키우고, 밑에 각 컬럼의 내용들은 한줄이 넘어가면 생략 표시로 뒤애 ... 뜨게 해서 height가 안 커지도록 변경

--- a/src/app/alarm/Alarm.module.css
+++ b/src/app/alarm/Alarm.module.css
@@ -142,6 +142,9 @@
 #thead {
     background-color: lavender;
 }
+.th {
+    padding: 10px;
+}
 .tr {
     cursor: pointer;
 }
@@ -153,6 +156,7 @@
     width: 10%;
     text-overflow: ellipsis;
     overflow: hidden;
+    white-space: nowrap
 
 }
 
@@ -161,6 +165,7 @@
     width: 30%;
     text-overflow: ellipsis;
     overflow: hidden;
+    white-space: nowrap
 }
 
 .thAuthor {
@@ -168,6 +173,7 @@
     width: 30%;
     text-overflow: ellipsis;
     overflow: hidden;
+    white-space: nowrap
 }
 
 .thContent {
@@ -175,6 +181,7 @@
     width: 30%;
     text-overflow: ellipsis;
     overflow: hidden;
+    white-space: nowrap
 }
 
 
