--- a/src/app/boards/[id]/NoneUserBoardReadForm.module.css
+++ b/src/app/boards/[id]/NoneUserBoardReadForm.module.css
@@ -201,7 +201,7 @@
     display: flex;
     flex:1;
 }
-#commentWriteName1 {
+.commentWriteName1 {
     border: 0px;
     background: #d3d3d375;
     width: 100%;
