--- a/src/app/boards/[id]/NoneUserBoardReadForm.module.css
+++ b/src/app/boards/[id]/NoneUserBoardReadForm.module.css
@@ -32,14 +32,12 @@
 }
 #boardTool {
     display: flex;
-    width: 90%;
-    transform: translateX(-50%);
-    margin-left: 50%;
+    justify-content: space-evenly;
 }
 #feedback {
     display: flex;
     justify-content: space-around;
-    width: 100%;
+    width: 90%;
     border: 1px solid black;
     background-color: white;
 }
